experimentData/JavaFuzzer/Jadx-detailedExperimentData/errorSamples/recompilation_failures/164/final-164/tmp/jadx/tmp/output.txt
Test.java:7: error: bad operand types for binary operator '&'
        this.instanceCount &= 50.231f;
                           ^
  first type:  long
  second type: float
1 error
